--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -9,12 +9,10 @@
   <!-- External CSS with integrity checks -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"  <!-- pragma: allowlist secret -->
-        crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> <!-- pragma: allowlist secret -->
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
-        integrity="sha384-c9MVh4yXsKHLyIoKUV+UmqGhQ3SBqHFPKJxYj3YKqZphZqKvmHvvnxsUoZKvdAqM"  <!-- pragma: allowlist secret -->
-        crossorigin="anonymous">
+        integrity="sha384-c9MVh4yXsKHLyIoKUV+UmqGhQ3SBqHFPKJxYj3YKqZphZqKvmHvvnxsUoZKvdAqM" crossorigin="anonymous"> <!-- pragma: allowlist secret -->
 
   {% load static %}
   <!-- Local CSS (Whitenoise adds cache-busting automatically) -->
@@ -80,8 +78,7 @@
 
   <!-- External JS with integrity checks -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"  <!-- pragma: allowlist secret -->
-          crossorigin="anonymous"></script>
+          integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> <!-- pragma: allowlist secret -->
 
   <!-- Local JS (Whitenoise adds cache-busting automatically) -->
   <script src="{% static 'js/sidebar-toggle.js' %}"></script>
